<resources>
    <string name="app_name">SocialMediaMvvm</string>
    <string name="title_article">Articles</string>
    <string name="title_users">Users</string>
    <string name="title_profile">Profile</string>


    <!-- UI elements -->
    <string name="btn_refresh">Try again</string>
    <string name="error_connection">No connection</string>
    <string name="error">An error has been occurred</string>
    <string name="empty">No data.</string>
    <string name="swipe_down_To_refresh">Swipe down to refresh</string>
    <string name="no_internet">No internet connection</string>
    <string name="internet_ok">Internet connected</string>
    <string name="username">User name</string>
    <string name="user_designation">User Designation</string>
    <string name="last_updated">Last Updated</string>
    <string name="content_placeholder">Article content goes here —— Lorem Ipsum is simply dummy text of
the printing and typesetting industry. Lorem Ipsum has been the
industry\'s standard dummy text ever since the 1500s, when an
unknown printer took a galley of type and scrambled it to make a type
specimen book.</string>
    <string name="article_title_ph">Article title goes here can be multiline.</string>
    <string name="url_ph">Article url goes here.</string>
    <string name="likes_ph">%d Likes</string>
    <string name="comments_ph">%d Comments</string>
    <string name="users_city">City</string>
    <string name="profile_fullname">Full name</string>
    <string name="profile_about_ph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="profile_photo_desc">Profile photo</string>

    <string name="retry">Retry</string>

</resources>