<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_article">

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.yogendra.socialmediamvvm.ui.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article">
        <action
            android:id="@+id/action_navigation_article_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <argument
            android:name="article_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.yogendra.socialmediamvvm.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_users">
        <action
            android:id="@+id/action_navigation_users_to_navigation_profile"
            app:destination="@id/navigation_profile"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.yogendra.socialmediamvvm.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="user_id"
            app:argType="string" />
    </fragment>
</navigation>