<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="articleModel"
            type="com.yogendra.socialmediamvvm.data.Articles" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/article_image_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{clickListener}"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_border_width="0.3dp"
            app:imageFromUrl="@{articleModel.user.get(0).avatar_url}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/username"

            android:onClick="@{clickListener}"
            android:text="@{articleModel.user.get(0).name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/last_updated_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/article_image_iv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/designation_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/user_designation"
            android:onClick="@{clickListener}"
            android:text="@{articleModel.user.get(0).designation}"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/username_tv"
            app:layout_constraintTop_toBottomOf="@+id/username_tv" />

        <TextView
            android:id="@+id/last_updated_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/last_updated"
            android:text="@{articleModel.dateFormatted}"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/article_media_iv"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/clouds"
            android:scaleType="fitXY"
            app:imageFromUrl='@{!articleModel.media.isEmpty()? articleModel.media[0].image_url:""}'
            app:isGone="@{articleModel.media.isEmpty()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/article_image_iv"
            app:layout_constraintTop_toBottomOf="@+id/article_image_iv" />

        <TextView
            android:id="@+id/article_content_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/content_placeholder"
            android:text="@{articleModel.content}"
            android:textSize="16sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/article_media_iv" />

        <TextView
            android:id="@+id/article_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/article_title_ph"
            android:text='@{!articleModel.media.isEmpty()? articleModel.media.get(0).title:""}'
            android:textSize="18sp"

            android:textStyle="bold"
            app:isGone="@{articleModel.media.isEmpty()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/article_content_tv"
            app:layout_constraintTop_toBottomOf="@+id/article_content_tv" />

        <TextView
            android:id="@+id/article_url_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/url_ph"
            android:onClick="@{clickListener}"
            android:text='@{!articleModel.media.isEmpty()?articleModel.media.get(0).url:""}'
            android:textColor="@color/color_url"

            android:textSize="18sp"
            app:isGone="@{articleModel.media.isEmpty()||articleModel.media.get(0).url==null}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/article_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/article_title_tv" />

        <TextView
            android:id="@+id/likes_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/likes_ph"
            android:text="@{String.format(@string/likes_ph, articleModel.formattedlikes)}"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/comments_tv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/article_url_tv"
            app:layout_constraintTop_toBottomOf="@+id/article_url_tv" />

        <TextView
            android:id="@+id/comments_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/comments_ph"
            android:text="@{String.format(@string/comments_ph, articleModel.formattedComments)}"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/likes_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>