<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="userModel"
            type="com.yogendra.socialmediamvvm.data.Users" />
    </data>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clipToPadding="false"
        android:onClick="@{userClickListener}"
        app:cardCornerRadius="6dp"
        app:contentPadding="16dp"
        app:cardElevation="16dp"
        app:cardMaxElevation="24dp"
        android:backgroundTint="@color/clouds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/users_photo_iv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_person_24"
                app:imageFromUrl="@{userModel.avatar_url}"

                app:civ_border_width="0.3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                 />

            <TextView
                android:id="@+id/users_uname_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                android:text="@{userModel.name}"

                android:hint="@string/username"
                app:layout_constraintEnd_toStartOf="@+id/users_city_tv"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/users_photo_iv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/users_designation_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:hint="@string/user_designation"
                android:text="@{userModel.designation}"

                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/users_uname_tv"
                app:layout_constraintTop_toBottomOf="@+id/users_uname_tv" />

            <TextView
                android:id="@+id/users_city_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:hint="@string/users_city"
                android:text="@{userModel.city}"

                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>